--- a/thesis.tex
+++ b/thesis.tex
@@ -32,23 +32,25 @@
 \graphicspath{{figures/}}
 
 %%% 封面部分
-%\frontmatter
-%\input{chapter/cover}
+\frontmatter
+\input{chapter/cover}
 %% 设置 PDF 文档的作者、主题等属性
-%\makeatletter
-%\ucas@setup@pdfinfo
-%\makeatother
-%\makecover
+\makeatletter
+\ucas@setup@pdfinfo
+\makeatother
+\makecover
 
 
 %% 目录
-%\tableofcontents
+\tableofcontents
 %% 插图索引
-%\listoffigures
+\listoffigures
 %% 表格索引
-%\listoftables
-
-
+\listoftables
+%% 算法索引
+\listofalgorithms
+%%
+\listofequations
 
 %%% 正文部分
 \mainmatter
@@ -56,9 +58,8 @@
 \include{chapter/chap2_relate}
 \include{chapter/chap3_design}
 \include{chapter/chap4_sample}
-\include{chapter/chap5_hybrid}
-%\include{chapter/chap6_summary}
-
+\include{chapter/chap5_impl}
+\include{chapter/chap6_summary}
 
 
 % 参考文献
@@ -77,7 +78,7 @@
 %\backmatter
 %
 %% 致谢
-%\include{chapter/ack}
+\include{chapter/ack}
 %
 %% 作者简介
 %\include{chapter/resume}
