校对修改-摘要，第一章

--- a/reference/reference.bib
+++ b/reference/reference.bib
@@ -695,6 +695,13 @@ year={2010}}
  howpublished="\url{http://mahout.apache.org}"
 }
 
+@misc{gibbsLda++,
+	author={Xuan-Hieu Phan and Cam-Tu Nguyen},
+	title={GibbsLDA++: A C/C++ implementation of latent Dirichlet allocation (LDA)}
+	year={2007},
+	howpublished="\url{http://gibbslda.sourceforge.net/}"
+}
+
 @article{sparks2013mli,
 title={MLI: An API for Distributed Machine Learning},
 author={Sparks, Evan and Talwalkar, Ameet and Smith, Virginia and Kottalam, Jey and Pan, Xinghao and Gonzalez, Joseph and Franklin, Michael J and Jordan, Michael I and Kraska, Tim},
