--- a/reference/reference.bib
+++ b/reference/reference.bib
@@ -688,6 +688,20 @@ year={2010}}
     pages = {2009}
 }
 
+@article{glint,
+	title={Web-scale Topic Models in Spark: An Asynchronous Parameter Server},
+	author={Jagerman, Rolf and Eickhoff, Carsten},
+	journal={arXiv preprint arXiv:1605.07422},
+	year={2016}
+}
+
+@misc{redis,
+ title={Redis project},
+ author={Redis},
+ howpublished="\url{https://redis.io}"
+}
+
+
 @misc{mahout,
  author={Apache Foundation},
  title={Mahout project},
@@ -697,7 +711,7 @@ year={2010}}
 
 @misc{gibbsLda++,
 	author={Xuan-Hieu Phan and Cam-Tu Nguyen},
-	title={GibbsLDA++: A C/C++ implementation of latent Dirichlet allocation (LDA)}
+	title={GibbsLDA++: A C/C++ implementation of latent Dirichlet allocation (LDA)},
 	year={2007},
 	howpublished="\url{http://gibbslda.sourceforge.net/}"
 }
