--- a/spine.tex
+++ b/spine.tex
@@ -9,8 +9,8 @@
 \begin{document}
 
 % 不带英文或数字的书脊
-\cauthor{张水源}
-\ctitle{基于多模态融合的微博分类}
+\cauthor{侯建鹏}
+\ctitle{基于数据分组的评价准则优化技术研究}
 
 %\cauthor{刘春梅}
 %\ctitle{开源论坛信息抽取技术研究}
